[project]
name = "llm-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langgraph>=0.4.5",
    "mcp>=1.9.0",
    "openai>=1.79.0",
    "streamlit>=1.45.1",
    "streamlit-chat>=0.1.1",
    "typing>=3.10.0.0",
    "nest_asyncio>=1.5.6",
    "langchain-openai>=0.3.17",
    "xlsxwriter>=3.2.5",
    "pandas>=2.2.3",
]
